# FVM-CPP

./: CMakeLists.txt  README.md
2DImp-STL/: computation_results.txt  main.cpp  output.cpp  output.h  output.hpp
DiffusionSolverSTL/: ConfigParser.cpp  Convergence.hpp  ExplicitScheme.cpp  Grid.hpp  HeatSolver.cpp  HeatSolver.hpp  ImplicitScheme.cpp  ImplicitScheme.hpp  PCG_solver.c  PCG_solver.h  SchemeType.hpp  config.txt  main.cpp  preconditioner.c  preconditioner.h
DiffusionSolverSTL/src/: ConfigParser.cpp  ConfigParser.hpp  Convergence.cpp  Convergence.hpp  CrankNicolsonScheme.cpp  CrankNicolsonScheme.hpp  ExplicitScheme.cpp  ExplicitScheme.hpp  Grid.cpp  Grid.hpp  HeatSolver.cpp  HeatSolver.hpp  ImplicitScheme.cpp  ImplicitScheme.hpp  Output.cpp  Output.hpp  PCG_solver.c  PCG_solver.h  SimulationParameters.hpp  TimeStepping.cpp  TimeStepping.hpp  linear_algebra.c  linear_algebra.h  main.cpp
DiffusionSolverSTL/src/convergence/: Convergence.cpp  Convergence.hpp
DiffusionSolverSTL/src/matrix_operations/: CPPVec2CArr.cpp  CPPVec2CArr.hpp  CRSMatrix.c  CRSMatrix.h  linear_algebra.c  linear_algebra.h
DiffusionSolverSTL/src/simulation_parameters/: Grid.cpp  Grid.hpp  SimulationParameters.cpp
DiffusionSolverSTL/src/solver/: CrankNicolsonScheme.cpp  CrankNicolsonScheme.hpp  ExplicitScheme.cpp  ExplicitScheme.hpp  HeatSolver.cpp  HeatSolver.hpp  ImplicitScheme.cpp  ImplicitScheme.hpp  TimeStepping.cpp  TimeStepping.hpp
DiffusionSolverSTL/src/utils/: PCG_solver.c  preconditioner.c  preconditioner.h
DiffusionSolverSTL/test/: test_CPPVec2CArr.cpp  test_crs_matrix.cpp  test_linear_algebra.cpp  test_pcg.cpp
